@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/sh
 
 # 20000 : 64000
 begin=20000
